Bundler integration and..
- Bundler integration
- Gemfile
- Support for external link post's
- Contact page
- Social icons (Github and Linkedin)
- New post on YAML formatting

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,9 @@ nav:
 - name: "Digest"
   href: "//md5.guicciardi.net"
   target: "blank"
+- name: "Contact"
+  href: "/contact"
+  target: "blank"
 
   # Sass
 sass:
@@ -64,6 +67,7 @@ defaults:
 plugins:
   - jekyll-seo-tag
   - octopress-minify-html
+  - jekyll-feed
 
 # Collections
 
